--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,21 @@
 		<param-value>/WEB-INF/spring/*-context.xml</param-value>
 	</context-param>
 	
+	<error-page>
+      <error-code>404</error-code>
+      <error-code>405</error-code>
+      <location>/WEB-INF/views/errors/error_404.jsp</location>
+   </error-page>
+   <error-page>
+      <error-code>400</error-code>
+      <location>/error/error400</location>
+   </error-page>
+   
+   <error-page>
+      <error-code>500</error-code>
+      <location>/error/error500</location>
+   </error-page>
+   
 	<filter>
 		<filter-name>encode</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -22,6 +37,7 @@
 		<filter-name>encode</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
 
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
