--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,13 @@
 	
 	<dependencies>
 	<!-- 메일전송 -->
-	<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
 	<dependency>
 	    <groupId>javax.mail</groupId>
-	    <artifactId>javax.mail-api</artifactId>
-	    <version>1.6.2</version>
+	    <artifactId>mail</artifactId>
+	    <version>1.4.7</version>
 	</dependency>
+
 	
 	
 
